# Data_Engineering_Steven

./: .env.example  .gitignore  Makefile  README.md  fix_submission.patch  pyproject.toml  requirements.txt
data/eval/: eval_cases.json
data/fixtures/: sample_movies.csv
data/processed/: 01_ingested_csv.csv  02_ingested_tmdb.csv  03_cleaned_csv.csv  04_cleaned_tmdb.csv  05_merged_movies.csv  06_movie_documents.csv  data_lineage.json  evaluation_results.json  evaluation_results.md  unified_movies.csv
data/raw/: movies_catalog.csv  movies_from_tmdb_fixture.json  omdb_fixture.json  ratings_snapshot.csv  reviews_corpus.jsonl
docs/: architecture.md  data_lineage.md  sample_queries.md
output/: evaluation_report.json  evaluation_report.md
scripts/: run_agent.py  run_eval.py  run_evaluation.py  run_pipeline.py  seed_sample_data.py
src/: config.py  main.py
src/agent/: agent_service.py  prompts.py  router.py
src/evaluation/: __init__.py  evaluator.py  test_queries.py
src/ingestion/: csv_loader.py  ingest_pipeline.py  tmdb_client.py
src/movie_intelligence_agent/: __init__.py  cli.py  config.py  exceptions.py  logger.py  models.py
src/processing/: build_documents.py  clean_movies.py  merge_sources.py  validate_schema.py
src/retrieval/: embedder.py  retriever.py  vector_store.py
src/storage/: db.py  models.py  repository.py
src/tools/: compare_movies.py  search_movies.py  semantic_search.py  top_rated.py
storage/: movie_agent.db
storage/tmp_run/: movie_agent_fresh.db
tests/: test_agent_routing.py  test_pipeline.py  test_retrieval.py  test_tools.py
(+19 files in other folders)
